add many many shit

--- a/src/assets/scss/JobPreviewCard/JobPreviewCard.scss
+++ b/src/assets/scss/JobPreviewCard/JobPreviewCard.scss
@@ -2,12 +2,10 @@
 
 .job-preview-card-container {
   width: 330px;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 15px;
   position: relative;
   background-color: $backgroundColor;
-  // box-shadow: 4px 4px 6px 0px #00000025, -4px -4px 6px 0px #ffffff81; // Option 1
-  // box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.342); // Option 2
   
   .card-header {
     display: flex;
@@ -25,8 +23,8 @@
       
       .icon {
         height: 1rem;
+        width: 2rem;
         fill: $iconColor;
-        margin-right: 10px;
       }
     }
   }
@@ -38,8 +36,6 @@
       width: 100%;
       max-width: 250px;
       margin: 0 auto;
-      padding: 1rem 0;
-
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -47,30 +43,33 @@
       .company-logo {
         height: 5rem;
         border-radius: 100%;
+        margin-top: 1rem;
       }
 
       .company-name {
         font-size: 14px;
         color: $fontColor;
         text-align: center;
+        margin-top: 1rem;
       }
       
       .job-name {
-        padding-top: 1rem;
+        margin-top: 0.5rem;
         text-align: center;
-        color: $fontColor;
+        animation: rgb-label infinite 30s;
       }
     }
 
     .skill-wrapper {
+      margin-top: 1rem;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
 
       .skill-box {
-        margin: 6px 10px;
-        padding: 6px 10px;
+        margin: 10px 10px;
+        padding: 8px 14px;
 
         text-align: center;
         border-radius: 30px;
@@ -86,6 +85,6 @@
 
     text-align: center;
     font-size: 14px;
-    color: $subfontColor;
+    animation: rgb-label infinite 30s;
   }
 }
