--- a/src/assets/scss/Welcome/welcome.scss
+++ b/src/assets/scss/Welcome/welcome.scss
@@ -150,7 +150,7 @@
         }
 
         .keyword {
-          color: #01a5a5;
+          color: #e2a54a;
         }
       }
 
@@ -323,7 +323,7 @@
       .selection {
         width: 0%;
         height: 100%;
-        border-radius: 20px;
+        border-radius: 30px;
         text-align: center;
         display: flex;         
         position: relative;       
@@ -369,7 +369,7 @@
 
         &:hover {
           cursor: pointer;
-          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.178);
+          box-shadow: 0 3px 50px #00000021;
         }
 
         &:hover:before, &:hover:after {
@@ -377,41 +377,41 @@
           display: block;
           width: 100%;
           height: 100%;
-          border-radius: 20px;
+          border-radius: 30px;
           position: absolute;
           z-index: -1;
-          background-color: #E900F8;
+          background-color: #f8bc61;
           animation: 2s selection-cw-animate infinite;
         }
 
         &:hover:after {
-          background-color: #4BE7E4;
+          background-color: #f06f6f;
           animation: 1.5s selection-ccw-animate infinite;
         }
 
         @keyframes selection-cw-animate {
           0% {
-            top: -2%;
+            top: -1.5%;
             left: 0;
           }
 
           25% {
             top: 0;
-            left: 2%;
+            left: 1.5%;
           }
     
           50% {
-            top: 2%;
+            top: 1.5%;
             left: 0;
           }
     
           75% {
             top: 0;
-            left: -2%;
+            left: -1.5%;
           }
     
           100% {
-            top: -2%;
+            top: -1.5%;
             left: 0;   
           }
         }
@@ -572,7 +572,7 @@
 
       .keyword {
         font-size: 1.2rem;
-        color: $pColorCyan;
+        color: $pColorYellow;
         font-weight: 900;
       }
 
@@ -594,87 +594,6 @@
     @include fifthSection();
     @include sixthSection();
   }
-
-  .rgb-bar {
-    width: 100%;
-    height: 6px;
-    animation: 10s rgb infinite;
-
-    @keyframes rgb {
-      0% {
-        background-color: #ff5b5b;
-      }
-
-      25% {
-        background-color: #80ff59;
-      }
-      50% {
-        background-color: #6156ff;
-      }
-      75% {
-        background-color: #ff5fcf;
-      }
-
-      100% {
-        background-color: #ff5b5b;
-      }
-    }
-  }
-  
-  footer {
-    position: relative;
-    z-index: 0;
-    text-align: center;
-    padding: 90px 0;
-    overflow: hidden;
-    background-color: #3d3d3d;
-
-    .social-wrapper {
-      width: 100%;
-      max-width: 150px;
-      margin: 0 auto;
-      padding: 16px 0;
-      
-      display: flex;
-      justify-content: space-between;
-      position: relative;
-
-      #facebook-icon {
-        width: 13px;
-        fill: #b1b1b1;
-        transition: all ease-in-out 1s;
-      }
-
-      #instagram-icon {
-        width: 23px;
-        fill: #b1b1b1;
-        transition: all ease-in-out 1s;
-      }
-
-      #twitter-icon {
-        width: 25px;
-        fill: #b1b1b1;
-        transition: all ease-in-out 1s;
-      }
-
-      svg:hover {
-        cursor: pointer;
-        fill: #f1f1f1;
-      }
-    }
-
-    .copyright {
-      width: 100%;
-      margin: 0 auto;
-
-      font-size: 12px;
-      color: #b1b1b1;
-
-      @media only screen and (max-width: 769px) {
-        font-size: 12px;
-      }
-    }
-  }
 }
 
 @include brandColors();
@@ -684,7 +603,7 @@
 }
 
 .secondSectionBackground {
-  background-color: $pColorCyan;
+  background-color: $pColorYellow;
 }
 
 .thirdSectionBackground {
@@ -692,7 +611,7 @@
 }
 
 .fourthSectionBackground {
-  background-color: $pColorCyan;
+  background-color: $pColorYellow;
 }
 
 .fifthSectionBackground {
