--- a/src/assets/scss/_globalVariable.scss
+++ b/src/assets/scss/_globalVariable.scss
@@ -9,6 +9,7 @@ $subfontColor: #777777;
 $pColorYellow: #f8bc61;
 $pColorPink: #f06f6f;
 $pColorPurple: #a249cf;
+$pColorBlue: #496dcf;
 // $pColorYellow: #ffa41b;
 // $pColorPink: #ff5151;
 // $pColorPurple: #9818d6;
