fix button shadow

--- a/src/assets/scss/CreateAccount/CreateAccount.scss
+++ b/src/assets/scss/CreateAccount/CreateAccount.scss
@@ -110,7 +110,7 @@
 					border-radius: 10px;
 					color: $backgroundColor;
 					font-weight: bolder;
-					box-shadow: 5px 5px 10px #00000046, -5px -5px 10px #ffffff;
+					box-shadow: 4px 4px 7px #00000021, -4px -4px 7px #ffffffab;
 
 					&:focus {
 						outline: none;
